package-parser: Add artefact classification and metadata.